<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_store"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_edit_text_placeholder"
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_service"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:layout_constraintBottom_toBottomOf="@id/service_question"/>

        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_text_view"
            app:layout_constraintStart_toEndOf="@id/icon_service_question"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service"
            android:layout_marginStart="16dp" />

        <RadioGroup
            android:id="@+id/quality_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/amazing_option"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/service_question"
            app:layout_constraintTop_toBottomOf="@+id/service_question">

            <RadioButton
                android:id="@+id/amazing_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:text="@string/amazing_radio_button_text" />

            <RadioButton
                android:id="@+id/good_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:text="@string/good_radio_button_text" />

            <RadioButton
                android:id="@+id/ok_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:text="@string/ok_radio_button_text" />
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_rounding_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_round_up"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rounding_switch"
            app:layout_constraintBottom_toBottomOf="@id/rounding_switch"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/rounding_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rounding_switch_text"
            style="@style/Widget.TipTime.TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_rounding_switch"
            app:layout_constraintTop_toBottomOf="@+id/quality_options"
            android:layout_marginStart="16dp"/>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/rounding_switch"
            app:layout_constraintTop_toBottomOf="@+id/rounding_switch" />

        <TextView
            android:id="@+id/calculating_result"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Tipping amount: $10"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/calculate_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>